subheader z-index fix

--- a/src/extensions/chapters.css
+++ b/src/extensions/chapters.css
@@ -168,8 +168,9 @@
     z-index: 100;
   }
 
-  body.sec-subheader #chapter-nav{
-    z-index: 1;
+  body.sec-subheader main{
+    z-index: 1000;
+    background: none;
   }
 
   /* Make each section button fill available height maximally */
